Content based model fix

--- a/content_based.ipynb
+++ b/content_based.ipynb
@@ -6,7 +6,7 @@
       "name": "content based.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOe0Cca9Wr9hOc3x4ebx+I0",
+      "authorship_tag": "ABX9TyODewYlYWn/3rIQufnVHtPI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,11 +54,7 @@
       "metadata": {
         "id": "Xr3DRR0Yarug",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125
-        },
-        "outputId": "3b556db7-14d7-41f0-9ec1-a504fcf7a60b"
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
@@ -66,25 +62,11 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "\n",
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn.metrics.pairwise import linear_kernel\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "from sklearn.feature_extraction.text import CountVectorizer"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: scikit-surprise in /usr/local/lib/python3.6/dist-packages (1.1.1)\n",
-            "Requirement already satisfied: numpy>=1.11.2 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (1.18.5)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (0.16.0)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (1.12.0)\n",
-            "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (1.4.1)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -127,24 +109,24 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 107
+          "height": 106
         },
-        "outputId": "83268c3e-1f4a-40ec-918d-00e06f3e8615"
+        "outputId": "9a016c29-8c83-4593-b535-7c9984dced52"
       },
       "source": [
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-ed88aa8f-26ed-4e91-bc30-da0c6aaf61af\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-21cc4fa9-81fd-487d-97de-38aff9795882\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-ed88aa8f-26ed-4e91-bc30-da0c6aaf61af\">\n",
+              "     <output id=\"result-21cc4fa9-81fd-487d-97de-38aff9795882\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -188,7 +170,7 @@
       "source": [
         "mov = pd.read_csv('movies.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -198,14 +180,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 202
         },
-        "outputId": "fd244881-1ee4-4575-ace4-43fb8204e69b"
+        "outputId": "c746c39b-e5d0-4b97-f2bf-1827a3e7761d"
       },
       "source": [
         "mov.head()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +265,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -309,7 +291,7 @@
       "source": [
         "imdb = pd.read_csv('imdb_data.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -319,14 +301,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 202
         },
-        "outputId": "4440d005-b30e-42c5-8410-20a3b4e102c1"
+        "outputId": "dc76f42c-2764-4f43-d246-9b542d4d4ab9"
       },
       "source": [
         "imdb.head()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +404,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -447,15 +429,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 202
         },
-        "outputId": "6795a9a0-96bc-4f41-b04f-6afbf77f2c4d"
+        "outputId": "48363895-7311-4086-ead9-fd34a675248d"
       },
       "source": [
         "alls = pd.merge(mov, imdb)\n",
         "alls.head()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +545,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -595,14 +577,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 176
+          "height": 173
         },
-        "outputId": "c2e9ffc6-4082-4568-a858-ccab232d9c53"
+        "outputId": "7753dee8-63cb-4526-9abb-12a2609f1489"
       },
       "source": [
         "alls.isna().sum()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,7 +604,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -633,9 +615,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 176
+          "height": 173
         },
-        "outputId": "07c5eefe-a641-4c03-c285-50c0ab1c0bb8"
+        "outputId": "70e84cf8-d94f-42c8-cabf-2f9d96e0ee7e"
       },
       "source": [
         "alls['genres'] = alls.genres.str.split('|')\n",
@@ -644,7 +626,7 @@
         "alls['plot_keywords'] = alls['plot_keywords'].fillna('')\n",
         "alls.isna().sum()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +646,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -675,14 +657,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 484
+          "height": 202
         },
-        "outputId": "32dc8479-0ac7-48a4-ab70-253aa1594ec7"
+        "outputId": "bcc84096-ba8e-4394-b769-65e564ea7bfa"
       },
       "source": [
         "alls.head()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -790,7 +772,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -817,7 +799,7 @@
         "alls = alls.drop(['runtime', 'budget'], axis = 1)\n",
         "alls = alls.drop('movieId', axis = 1)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -827,14 +809,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 121
         },
-        "outputId": "b4e6c8a9-d88b-4ad6-a8bf-a981614fc765"
+        "outputId": "084af9be-0075-4cce-f673-cf0ca6ead763"
       },
       "source": [
         "alls.isna().sum()"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +833,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -879,7 +861,7 @@
         "alls['plot_keywords'] = alls.plot_keywords.str.split('|')\n",
         "alls['title'] = alls['title'].str.extract('(.*)\\((\\d{4})\\)', expand=False)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -889,14 +871,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 364
+          "height": 202
         },
-        "outputId": "6e34d56d-a05b-4447-9096-f274c4020833"
+        "outputId": "d200bdfc-e2da-4a7c-974b-919d9698b55a"
       },
       "source": [
         "alls.head()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -986,7 +968,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -1019,7 +1001,7 @@
         "        else:\n",
         "            return ''"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1030,12 +1012,10 @@
         "colab": {}
       },
       "source": [
-        "list_new = ['title', 'genres', 'title_cast', 'director', 'plot_keywords']\n",
-        "\n",
         "for items in alls:\n",
         "    alls[items] = alls[items].apply(clean)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1045,14 +1025,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 202
         },
-        "outputId": "55f52146-fb51-45e3-c9ec-66ecae8b30bf"
+        "outputId": "18aa94d9-0f49-4ab0-bbaf-d7812acb909f"
       },
       "source": [
         "alls.head()"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1122,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -1168,45 +1148,7 @@
         "    return ' '.join(x['genres']) + ' ' + ' '.join(x['title_cast']) + ' ' + x['director'] + ' ' + ' '.join(x['plot_keywords'])\n",
         "alls['soup'] = alls.apply(soup, axis=1)"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PpCHadP5dHp6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hwck3qqWyUtj",
-        "colab_type": "text"
-      },
-      "source": [
-        "###Frequency- Inverse Document Frequency\n",
-        "Is the filtering process uses the features weighting method known as Term Frequency- Inverse Document Frequency (TF-IDF) for its content-based recommender system"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qfrwFO9Umc-F",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "tfidf = TfidfVectorizer(stop_words='english')\n",
-        "tfidf_matrix = tfidf.fit_transform(alls)"
-      ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1220,17 +1162,83 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rcfe41rQ5huo",
+        "colab_type": "text"
+      },
+      "source": [
+        "## WE THEN RESET THE INDEX\n",
+        "\n",
+        "THIS FUNCTION GENERATES A NEW DATAFRAME OR SERIES SETTING THE INDICES IN ORDER, STARTING FROM 0, MAKING IT EASIER TO WORK WITH THE DATAFRAME/SERIES."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Ynct46wpmdBb",
+        "id": "nAeKImkM3G_a",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
-        "indices = pd.Series(alls.index, index=alls['title']).drop_duplicates()"
+        "alls = alls.reset_index()\n",
+        "indices = pd.Series(alls.index, index=alls['title'])"
       ],
-      "execution_count": null,
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0AJc3LOy61t8",
+        "colab_type": "text"
+      },
+      "source": [
+        "#COUNTVECTORIZER\n",
+        "\n",
+        "IT PROVIDES A SIMPLE WAY TO BOTH TOKENIZER A COLLECTION OF TEXT DOCUMENTS AND BUILD A VOCABULARY OF KNOWN WORDS.\n",
+        "\n",
+        "ALSO ENABLING THE PRE-PROCESSING OF TEXT DATA PRIOR TO GENERATING THE VECTOR REPRESENTATION MAKING IT A HIGHLY FLEXIBLE FEATURE REPRESENTATION MODULE FOR TEXT."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nA76u5lq3HIn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "count = CountVectorizer(stop_words='english')\n",
+        "count_matrix = count.fit_transform(alls['soup'])"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JjkHC3Vh8kgf",
+        "colab_type": "text"
+      },
+      "source": [
+        "##COSINE SIMILARITY\n",
+        "\n",
+        "A METRIC USED TO DETERMINE HOW SIMILAR DATA/DOCUMENTS ARE.\n",
+        "IT MEASURES SIMILARITY BETWEEN TWO TWO NON-ZERO VECTORS OF AN INNER PRODUCT SPACE THAT MEASURES THE COSINE OF THE ANGLE BETWEEN THEM."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kL8tvwAR3HGJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cosine_sim = cosine_similarity(count_matrix, count_matrix)"
+      ],
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1264,7 +1272,7 @@
         "    # Return the top 10 most similar movies\n",
         "    return alls['title'].iloc[movie_indices]"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1284,24 +1292,29 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 208
         },
-        "outputId": "d81de470-0a75-435b-db09-a9730edef352"
+        "outputId": "43ea3d16-d25e-46dd-85a7-fa3989a68737"
       },
       "source": [
         "reco('jumanji', cosine_sim)"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0                  toystory\n",
-              "2            grumpieroldmen\n",
-              "3           waitingtoexhale\n",
-              "4    fatherofthebridepartii\n",
-              "5                      heat\n",
+              "986                           escapetowitchmountain\n",
+              "1953                  darbyo'gillandthelittlepeople\n",
+              "2002                                     returntooz\n",
+              "2070                           neverendingstory,the\n",
+              "2307                            santaclaus:themovie\n",
+              "10715    brotherslionheart,the(brödernalejonhjärta)\n",
+              "15233                             aliceinwonderland\n",
+              "24008                   journeytothebeginningoftime\n",
+              "898                                  wizardofoz,the\n",
+              "1943                              blackcauldron,the\n",
               "Name: title, dtype: object"
             ]
           },
