--- a/Noxolo_RecSys.ipynb
+++ b/Noxolo_RecSys.ipynb
@@ -70,7 +70,6 @@
     "train = pd.read_csv(\"train.csv\")\n",
     "test = pd.read_csv(\"test.csv\")\n",
     "movies = pd.read_csv(\"movies.csv\")\n",
-    "ratings = pd.read_csv(\"ratings.csv\")\n",
     "links = pd.read_csv('links.csv')\n",
     "tags = pd.read_csv('tags.csv')\n",
     "imdb = pd.read_csv('imdb_data.csv')\n",
@@ -131,8 +130,8 @@
    ],
    "source": [
     "# The movies dataframe\n",
-    "print(movies.head())\n",
-    "print(movies.shape)"
+    "print(movies.shape)\n",
+    "movies.head()"
    ]
   },
   {
@@ -161,8 +160,8 @@
    ],
    "source": [
     "# The links dataframe\n",
-    "print(links.head())\n",
-    "print(links.shape)"
+    "print(links.shape)\n",
+    "links.head()"
    ]
   },
   {
@@ -173,160 +172,6 @@
    },
    "source": [
     "Given the similar shape of the movie and links i.e. movie homepage dataframes, we can already note that the two dataframes can be merged to form a metadataset using the Ids of the movies."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "xEiRGw9SAHBT",
-    "outputId": "bac16ec0-efd8-4264-be55-bc80114d7aac"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   userId  movieId  rating   timestamp\n",
-      "0       1       31     2.5  1260759144\n",
-      "1       1     1029     3.0  1260759179\n",
-      "2       1     1061     3.0  1260759182\n",
-      "3       1     1129     2.0  1260759185\n",
-      "4       1     1172     4.0  1260759205\n",
-      "(100004, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The ratings dataframe\n",
-    "print(ratings.head())\n",
-    "print(ratings.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "fsoE_20-AHBW"
-   },
-   "source": [
-    "It is not surpring that this dataframe has alomst 2x more entries than the movie dataset because an individual user can watch more than one movies and also provide ratings for a selection of various movies."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "-VMMBGFRAHBX",
-    "outputId": "104a0d17-736e-4f35-903d-770797f47cdd"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   movieId                                         title_cast  \\\n",
-      "0        1  Tom Hanks|Tim Allen|Don Rickles|Jim Varney|Wal...   \n",
-      "1        2  Robin Williams|Jonathan Hyde|Kirsten Dunst|Bra...   \n",
-      "2        3  Walter Matthau|Jack Lemmon|Sophia Loren|Ann-Ma...   \n",
-      "3        4  Whitney Houston|Angela Bassett|Loretta Devine|...   \n",
-      "4        5  Steve Martin|Diane Keaton|Martin Short|Kimberl...   \n",
-      "\n",
-      "              director  runtime       budget  \\\n",
-      "0        John Lasseter     81.0  $30,000,000   \n",
-      "1   Jonathan Hensleigh    104.0  $65,000,000   \n",
-      "2  Mark Steven Johnson    101.0  $25,000,000   \n",
-      "3       Terry McMillan    124.0  $16,000,000   \n",
-      "4       Albert Hackett    106.0  $30,000,000   \n",
-      "\n",
-      "                                       plot_keywords  \n",
-      "0                   toy|rivalry|cowboy|cgi animation  \n",
-      "1                   board game|adventurer|fight|game  \n",
-      "2                         boat|lake|neighbor|rivalry  \n",
-      "3  black american|husband wife relationship|betra...  \n",
-      "4                    fatherhood|doberman|dog|mansion  \n",
-      "(27278, 6)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The imdb dataframe\n",
-    "print(imdb.head())\n",
-    "print(imdb.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "5JB7AjkFAHBa"
-   },
-   "source": [
-    "This dataframe consists of additional movie metadata scraped from IMDB using the links.csv file. These include cast/crew, budgets, plots as well as the runtime. The IMDB platform has its own movie-listing requirements therefore this could be the reason why the dataframe doesn't capture all the movies in the links.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "EKa1-zgWAHBb",
-    "outputId": "f1d7f85d-83da-4ab7-b8c2-9d48c7c4df5f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   userId  movieId               tag   timestamp\n",
-      "0       3      260           classic  1439472355\n",
-      "1       3      260            sci-fi  1439472256\n",
-      "2       4     1732       dark comedy  1573943598\n",
-      "3       4     1732    great dialogue  1573943604\n",
-      "4       4     7569  so bad it's good  1573943455\n",
-      "(1093360, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The ratings dataframe\n",
-    "print(tags.head())\n",
-    "print(tags.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "qTP230H3AHBe",
-    "outputId": "91eda4eb-c697-467a-919c-16b635732b72"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   movieId  tagId  relevance\n",
-      "0        1      1    0.02875\n",
-      "1        1      2    0.02375\n",
-      "2        1      3    0.06250\n",
-      "3        1      4    0.07575\n",
-      "4        1      5    0.14075\n",
-      "(15584448, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The score dataframe\n",
-    "print(scores.head())\n",
-    "print(scores.shape)"
    ]
   },
   {
@@ -425,6 +270,161 @@
    "source": [
     "# Overview of the training dataframe\n",
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "xEiRGw9SAHBT",
+    "outputId": "bac16ec0-efd8-4264-be55-bc80114d7aac"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   userId  movieId  rating   timestamp\n",
+      "0       1       31     2.5  1260759144\n",
+      "1       1     1029     3.0  1260759179\n",
+      "2       1     1061     3.0  1260759182\n",
+      "3       1     1129     2.0  1260759185\n",
+      "4       1     1172     4.0  1260759205\n",
+      "(100004, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The ratings dataframe\n",
+    "ratings = train[:10000]\n",
+    "print(ratings.shape)\n",
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "fsoE_20-AHBW"
+   },
+   "source": [
+    "It is not surpring that this dataframe has alomst 2x more entries than the movie dataset because an individual user can watch more than one movies and also provide ratings for a selection of various movies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "-VMMBGFRAHBX",
+    "outputId": "104a0d17-736e-4f35-903d-770797f47cdd"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   movieId                                         title_cast  \\\n",
+      "0        1  Tom Hanks|Tim Allen|Don Rickles|Jim Varney|Wal...   \n",
+      "1        2  Robin Williams|Jonathan Hyde|Kirsten Dunst|Bra...   \n",
+      "2        3  Walter Matthau|Jack Lemmon|Sophia Loren|Ann-Ma...   \n",
+      "3        4  Whitney Houston|Angela Bassett|Loretta Devine|...   \n",
+      "4        5  Steve Martin|Diane Keaton|Martin Short|Kimberl...   \n",
+      "\n",
+      "              director  runtime       budget  \\\n",
+      "0        John Lasseter     81.0  $30,000,000   \n",
+      "1   Jonathan Hensleigh    104.0  $65,000,000   \n",
+      "2  Mark Steven Johnson    101.0  $25,000,000   \n",
+      "3       Terry McMillan    124.0  $16,000,000   \n",
+      "4       Albert Hackett    106.0  $30,000,000   \n",
+      "\n",
+      "                                       plot_keywords  \n",
+      "0                   toy|rivalry|cowboy|cgi animation  \n",
+      "1                   board game|adventurer|fight|game  \n",
+      "2                         boat|lake|neighbor|rivalry  \n",
+      "3  black american|husband wife relationship|betra...  \n",
+      "4                    fatherhood|doberman|dog|mansion  \n",
+      "(27278, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The imdb dataframe\n",
+    "print(imdb.head())\n",
+    "print(imdb.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "5JB7AjkFAHBa"
+   },
+   "source": [
+    "This dataframe consists of additional movie metadata scraped from IMDB using the links.csv file. These include cast/crew, budgets, plots as well as the runtime. The IMDB platform has its own movie-listing requirements therefore this could be the reason why the dataframe doesn't capture all the movies in the links.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "EKa1-zgWAHBb",
+    "outputId": "f1d7f85d-83da-4ab7-b8c2-9d48c7c4df5f"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   userId  movieId               tag   timestamp\n",
+      "0       3      260           classic  1439472355\n",
+      "1       3      260            sci-fi  1439472256\n",
+      "2       4     1732       dark comedy  1573943598\n",
+      "3       4     1732    great dialogue  1573943604\n",
+      "4       4     7569  so bad it's good  1573943455\n",
+      "(1093360, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The tags dataframe\n",
+    "print(tags.head())\n",
+    "print(tags.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "qTP230H3AHBe",
+    "outputId": "91eda4eb-c697-467a-919c-16b635732b72"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   movieId  tagId  relevance\n",
+      "0        1      1    0.02875\n",
+      "1        1      2    0.02375\n",
+      "2        1      3    0.06250\n",
+      "3        1      4    0.07575\n",
+      "4        1      5    0.14075\n",
+      "(15584448, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The scores dataframe\n",
+    "print(scores.head())\n",
+    "print(scores.shape)"
    ]
   },
   {
@@ -676,7 +676,166 @@
     }
    ],
    "source": [
+    "movies['genres'] = movies['genres'].str.replace('|',' ')\n",
     "movies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = len(ratings.userId.unique())\n",
+    "items = len(ratings.movieId.unique())\n",
+    "print('There are {} unique users and {} unique movies in this data set'.format(num_users, num_items))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_userId = df_ratings.userId.max()\n",
+    "max_itemId = df_ratings.movieId.max()\n",
+    "print('There are {} distinct users and the max of user ID is also {}'.format(num_users, user_maxId))\n",
+    "print('There are {} distinct movies, however, the max of movie ID is {}'.format(num_items, item_maxId))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For matrix factorization, a item vector that is in unnecessarily high dimensional space requires data cleaning to reduce the dimension of item vector back to the number of items i.e.Movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reduce_item_dim(df_ratings):\n",
+    "    \"\"\"\n",
+    "    Reduce item vector dimension to the number of distinct items in our data sets\n",
+    "    \n",
+    "    input: pd.DataFrame, df_ratings should have columns ['userId', 'movieId', 'rating']\n",
+    "    output: pd.DataFrame, df_ratings with new 'MovieID' that is compressed\n",
+    "    \"\"\"\n",
+    "    # pivot\n",
+    "    df_user_item = df_ratings.pivot(index='userId', columns='movieId', values='rating')\n",
+    "    # reset movieId\n",
+    "    df_user_item = df_user_item.T.reset_index(drop=True).T\n",
+    "    # undo pivot/melt - compress data frame\n",
+    "    df_ratings_new = df_user_item \\\n",
+    "        .reset_index('userId') \\\n",
+    "        .melt(\n",
+    "            id_vars='userId', \n",
+    "            value_vars=df_user_item.columns,\n",
+    "            var_name='movieId',\n",
+    "            value_name='rating')\n",
+    "    # drop nan and final clean up\n",
+    "    return df_ratings_new.dropna().sort_values(['userId', 'movieId']).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('reduce item dimension before:')\n",
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_ratings = reduce_item_dim(ratings.copy())\n",
+    "print('reduce item dimension after:')\n",
+    "new_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Alternative Filtering and cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#limit ratings to user ratings that have rated more that 55 movies -- \n",
+    "ratings_f = ratings.groupby('userId').filter(lambda x: len(x) >= 55)\n",
+    "\n",
+    "# list the movie titles that survive the filtering\n",
+    "movie_list_rating = ratings_f.movieId.unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The prop of the original movie titles in ratings data frame that we have retained:\n",
+    "len(ratings_f.movieId.unique())/len(movies.movieId.unique()) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The prop of the users in ratings data frame that we have retained:\n",
+    "len(ratings_f.userId.unique())/len(ratings.userId.unique()) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filter the movies data frame\n",
+    "movies = movies[movies.movieId.isin(movie_list_rating)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# map movie to id:\n",
+    "Mapping_file = dict(zip(movies.title.tolist(), movies.movieId.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dropping the timestamps\n",
+    "tags.drop(['timestamp'],1, inplace=True)\n",
+    "ratings_f.drop(['timestamp'],1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merging the movies and the tags dataframes and creating a metadata tag for each movie"
    ]
   },
   {
@@ -843,10 +1002,9 @@
     }
    ],
    "source": [
-    "# combining the dataframe with all movie information\n",
-    "data = pd.merge(movies, imdb, how ='left', on ='movieId')\n",
-    "metadata = pd.merge(data, links, how ='left', on='movieId')\n",
-    "metadata.head()"
+    "# creating the mixed dataframe of movies title, genres and all user tags given to each movie\n",
+    "mixed = pd.merge(movies, tags, on='movieId', how='left')\n",
+    "mixed.head(3)"
    ]
   },
   {
@@ -2177,7 +2335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
