modified results of base models

--- a/selebogo_notebook.ipynb
+++ b/selebogo_notebook.ipynb
@@ -634,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.sort_values('rmse',ascending=False, inplace=True)"
+    "results.sort_values('rmse', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -672,24 +672,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>NormalPredictor</th>\n",
-       "      <td>1.473823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KNNBasic</th>\n",
-       "      <td>1.081234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BaselineOnly</th>\n",
-       "      <td>1.041735</td>\n",
+       "      <th>SVDpp</th>\n",
+       "      <td>1.038224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVD</th>\n",
        "      <td>1.041339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SVDpp</th>\n",
-       "      <td>1.038224</td>\n",
+       "      <th>BaselineOnly</th>\n",
+       "      <td>1.041735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNNBasic</th>\n",
+       "      <td>1.081234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NormalPredictor</th>\n",
+       "      <td>1.473823</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -697,14 +697,14 @@
       ],
       "text/plain": [
        "                     rmse\n",
-       "NormalPredictor  1.473823\n",
-       "KNNBasic         1.081234\n",
-       "BaselineOnly     1.041735\n",
+       "SVDpp            1.038224\n",
        "SVD              1.041339\n",
-       "SVDpp            1.038224"
+       "BaselineOnly     1.041735\n",
+       "KNNBasic         1.081234\n",
+       "NormalPredictor  1.473823"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
