saved as pickle

--- a/selebogo_notebook.ipynb
+++ b/selebogo_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "from surprise import SVD, SVDpp, NormalPredictor, KNNBasic, BaselineOnly\n",
     "from surprise import Reader, Dataset, accuracy\n",
     "from surprise.model_selection import train_test_split\n",
+    "import pickle\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -714,11 +715,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the results, SVDpp seems to be performing the best."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "algo = SVDpp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.matrix_factorization.SVDpp at 0x23fc48df5e0>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "algo.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'mySVDpp.pkl'\n",
+    "pickle.dump(algo, open(filename, 'wb'))"
+   ]
   }
  ],
  "metadata": {
