content base fix

--- a/Team_EN3_JHB_Notebook.ipynb
+++ b/Team_EN3_JHB_Notebook.ipynb
@@ -181,7 +181,7 @@
         "from surprise import SVDpp\n",
         "from surprise import NMF"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2898,7 +2898,7 @@
         "movies = pd.read_csv('data/movies.csv')\n",
         "imdb = pd.read_csv('data/imdb_data.csv')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2916,7 +2916,7 @@
         "#In order to best recommend a movie, we need to look at the list of movies we have. \n",
         "movies.head()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3009,7 +3009,7 @@
         "#Remove years from title again because we reloaded the data.\n",
         "movies['title'] = movies['title'].str.extract('(.*)\\((\\d{4})\\)', expand=False)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3037,7 +3037,7 @@
       "source": [
         "imdb.head()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3165,7 +3165,7 @@
         "alls = pd.merge(movies, imdb)\n",
         "alls.head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3292,7 +3292,7 @@
         "# Checking for null values\n",
         "alls.isna().sum()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3333,7 +3333,7 @@
         "alls['plot_keywords'] = alls.plot_keywords.str.split('|')\n",
         "alls.isna().sum()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3358,7 +3358,7 @@
         "alls = alls.drop(['runtime', 'budget'], axis = 1)\n",
         "alls = alls.drop('movieId', axis = 1)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3376,7 +3376,7 @@
         "# Checking for missing values\n",
         "alls.isna().sum()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3417,7 +3417,7 @@
       "source": [
         "mov = alls.copy()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3450,7 +3450,7 @@
         "        else:\n",
         "            return ''"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3472,7 +3472,7 @@
         "# Looking at the cleaned dataframe\n",
         "alls.head(3)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3571,7 +3571,7 @@
         "    return ' '.join(x['genres']) + ' ' + ' '.join(x['title_cast']) + ' ' + x['director'] + ' ' + ' '.join(x['plot_keywords'])\n",
         "alls['soup'] = alls.apply(soup, axis=1)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3587,7 +3587,7 @@
         "alls = alls.reset_index()\n",
         "indices = pd.Series(alls.index, index=alls['title'])"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3615,7 +3615,7 @@
         "count = CountVectorizer(stop_words='english')\n",
         "count_matrix = count.fit_transform(alls['soup'])"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3688,7 +3688,7 @@
         "# Creating the instance of csine similarity\n",
         "cosine_sim = cosine_similarity(count_matrix, count_matrix)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3714,7 +3714,7 @@
         "    # Return the top 10 most similar movies\n",
         "    return alls['title'].iloc[movie_indices]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3747,7 +3747,7 @@
       "source": [
         "rec = reco('jumanji', cosine_sim)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3764,7 +3764,7 @@
       "source": [
         "mov.loc[rec.index.tolist()]['title']"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4602,6 +4602,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "tnN_CYZXt-_O",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7SwfcBOU5sWA",
         "colab_type": "code",
         "colab": {}
       },
