--- a/Predict_Notebook.ipynb
+++ b/Predict_Notebook.ipynb
@@ -144,21 +144,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_6sNbq2bUKWy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# !pip install surprise\n",
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
-      ],
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab_type": "code",
         "id": "DWt78EugTAR5",
         "colab": {}
@@ -219,14 +204,14 @@
       },
       "source": [
         "# loading in the datasets\n",
-        "movies = pd.read_csv(\"/content/drive/My Drive/Music/movies.csv\")\n",
-        "links = pd.read_csv('/content/drive/My Drive/Music/links.csv')\n",
-        "imdb = pd.read_csv('/content/drive/My Drive/Music/imdb_data.csv')\n",
-        "tags = pd.read_csv('/content/drive/My Drive/Music/tags.csv')\n",
-        "train = pd.read_csv(\"/content/drive/My Drive/Music/train.csv\")\n",
-        "test = pd.read_csv(\"/content/drive/My Drive/Music/test.csv\")\n",
+        "movies = pd.read_csv(\"data/movies.csv\")\n",
+        "links = pd.read_csv('data/links.csv')\n",
+        "imdb = pd.read_csv('data/imdb_data.csv')\n",
+        "tags = pd.read_csv('data/tags.csv')\n",
+        "train = pd.read_csv(\"data/train.csv\")\n",
+        "test = pd.read_csv(\"data/test.csv\")\n",
         "#scores = pd.read_csv('genome_scores.csv')\n",
-        "Sample_Submission = pd.read_csv('/content/drive/My Drive/Music/sample_submission.csv')"
+        "Sample_Submission = pd.read_csv('sample_submission.csv')"
       ],
       "execution_count": 82,
       "outputs": []
@@ -4975,7 +4960,7 @@
       },
       "source": [
         "from IPython.display import Image\n",
-        "Image(filename = \"/content/drive/My Drive/Music/Capture.png\")"
+        "Image(filename = \"data/Capture.png\")"
       ],
       "execution_count": 153,
       "outputs": [
