--- a/Predict_Notebook.ipynb
+++ b/Predict_Notebook.ipynb
@@ -77,13 +77,29 @@
         "---\n",
         "2.   [Load Dependencies](#imports)\n",
         "---\n",
-        "3.   [Data cleaning](#cleaning)\n",
+        "3.   [Data Overview](#Overview)\n",
+        "  *   Shape\n",
+        "  *   Information about data\n",
+        "  *   features\n",
         "---\n",
         "4.   [Data preprocessing](#preprocessing)\n",
+        "  *   Detecting and correcting corrupt data\n",
         "---\n",
         "5.   [Exploratory Data Analysis](#EDA)\n",
+        "  *   The number of movies being released\n",
+        "  *   The number of ratings for the movies released\n",
+        "  *   The years with majority of movies being released\n",
+        "  *   The kind of movies that are being released\n",
+        "  *   The runtime of movies that are being released\n",
         "---\n",
         "6.   [Modelling](#modelling)\n",
+        "  *   Content Based Filtering\n",
+        "  *   Cosine Similarity\n",
+        "  *   Collaborative Filtering\n",
+        "  *   Movie Recommendations\n",
+        "  *   Surprise\n",
+        "  *   Single Rating Prediction\n",
+        "  *   Multiple Ratings Prediction\n",
         "---\n",
         "7.   [Performance Evaluation](#evaluation)\n",
         "---\n",
@@ -2868,7 +2884,7 @@
         "id": "P8cvmt10u-U7"
       },
       "source": [
-        "### Suprise\n",
+        "### Surprise\n",
         "Surprise is a Python scikit building and analyzing recommender systems that deal with explicit rating data. We will be using it to develop and train our recommender models."
       ]
     },
@@ -3812,14 +3828,164 @@
       "metadata": {
         "id": "ypmZ0qlNTGG4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 406
+        },
+        "outputId": "e94b2c39-54ae-4107-dfee-037de1a0dfe5"
       },
       "source": [
         "# Merging data with titles to can create a pivot_table\n",
-        "X = pd.merge(small_data, new_df, on = 'movieId')\n"
+        "X = pd.merge(small_data, new_df, on = 'movieId')"
       ],
-      "execution_count": 142,
-      "outputs": []
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>userId</th>\n",
+              "      <th>movieId</th>\n",
+              "      <th>rating</th>\n",
+              "      <th>timestamp</th>\n",
+              "      <th>title</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5163</td>\n",
+              "      <td>57669</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1518349992</td>\n",
+              "      <td>In Bruges</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>87388</td>\n",
+              "      <td>57669</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>1237455297</td>\n",
+              "      <td>In Bruges</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>137050</td>\n",
+              "      <td>57669</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1425631854</td>\n",
+              "      <td>In Bruges</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>120490</td>\n",
+              "      <td>57669</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>1408228517</td>\n",
+              "      <td>In Bruges</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>50616</td>\n",
+              "      <td>57669</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>1446941640</td>\n",
+              "      <td>In Bruges</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19994</th>\n",
+              "      <td>10503</td>\n",
+              "      <td>668</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>938956031</td>\n",
+              "      <td>Song of the Little Road (Pather Panchali)</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19995</th>\n",
+              "      <td>96771</td>\n",
+              "      <td>6793</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>1300264627</td>\n",
+              "      <td>Beethoven</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19996</th>\n",
+              "      <td>119570</td>\n",
+              "      <td>874</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>842751579</td>\n",
+              "      <td>Killer: A Journal of Murder</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19997</th>\n",
+              "      <td>63045</td>\n",
+              "      <td>43919</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>1155210227</td>\n",
+              "      <td>Date Movie</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19998</th>\n",
+              "      <td>10893</td>\n",
+              "      <td>80846</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>1527723343</td>\n",
+              "      <td>Devil</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>19999 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       userId  movieId  ...   timestamp                                      title\n",
+              "0        5163    57669  ...  1518349992                                  In Bruges\n",
+              "1       87388    57669  ...  1237455297                                  In Bruges\n",
+              "2      137050    57669  ...  1425631854                                  In Bruges\n",
+              "3      120490    57669  ...  1408228517                                  In Bruges\n",
+              "4       50616    57669  ...  1446941640                                  In Bruges\n",
+              "...       ...      ...  ...         ...                                        ...\n",
+              "19994   10503      668  ...   938956031  Song of the Little Road (Pather Panchali)\n",
+              "19995   96771     6793  ...  1300264627                                  Beethoven\n",
+              "19996  119570      874  ...   842751579                Killer: A Journal of Murder\n",
+              "19997   63045    43919  ...  1155210227                                 Date Movie\n",
+              "19998   10893    80846  ...  1527723343                                      Devil\n",
+              "\n",
+              "[19999 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 158
+        }
+      ]
     },
     {
       "cell_type": "code",
